[package]
name = "launchpad"
version = "0.1.0"
description = "Forge bonding-curve token launchpad program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "launchpad"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
mpl-token-metadata = "=5.1.1"

[dev-dependencies]
litesvm = "=0.7.1"
solana-sdk = "2.3"
spl-token = "8.0"
spl-associated-token-account-client = "2.0"
solana-system-interface = "1.0"
